<resources>
    <string name="app_name">Daily Health</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="action_register">Register</string>
    <string name="action_skip">Skip</string>
    <string name="register_title">Sign Up</string>
    <string name="register_username">Username</string>
    <string name="register_email">Email</string>
    <string name="register_password">Password</string>
    <string name="register_tandc">By signing up you agree to our terms and conditions, as well as our privacy policy</string>
    <string name="register_1of4">1 of 4</string>
    <string name="register_page1_t">Male or Female?</string>
    <string name="register_page1_s">Men and women have different requirements when it comes to health</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="register_2of4">2 of 4</string>
    <string name="register_page2_t">How old are you?</string>
    <string name="register_page2_s">Different age ranges have different health goals</string>
    <string name="register_3of4">3 of 4</string>
    <string name="register_page3_t">How much do you weigh?</string>
    <string name="register_page3_s">This is used to set up recommendations for you</string>
    <string name="register_4of4">4 of 4</string>
    <string name="register_page4_t">How tall are you?</string>
    <string name="register_page4_s">This is used to set up recommendations for you</string>
    <string name="register_finish">Finish</string>
    <string name="home_page">Home Page</string>
    <string name="disease_intro">Disease Introduction</string>
    <string name="first_aid">First Aid</string>
    <string name="measurement">Measurement</string>
    <string name="health_record">Your Health Record</string>
    <string name="appointment">Make An Appointment</string>
    <string name="direct_support">Ask For Direct Support</string>
    <string name="log_out">Sign Out</string>
    <string name="library">LIBRARY</string>
    <string name="asthma">Asthma</string>
    <string name="diabetes">Diabetes</string>
    <string name="back_arrow">Back Arrow</string>
    <string name="introduction_asthma">Introduction: Asthma</string>
    <string name="what_is_asthma_title">What is Asthma?</string>
    <string name="what_is_asthma">Asthma is a condition in which your airways narrow and swell and produce extra mucus. This can make breathing difficult and trigger coughing, wheezing and shortness of breath.\n
        \nFor some people, asthma is a minor nuisance. For others, it can be a major problem that interferes with daily activities and may lead to a life-threatening asthma attack.\n
        \nAsthma can\'t be cured, but its symptoms can be controlled. Because asthma often changes over time, it\'s important that you work with your doctor to track your signs and symptoms and adjust treatment as needed.
    </string>
    <string name="symptoms_title">Symptoms</string>
    <string name="symptoms_asthma"><b>Asthma signs and symptoms include:</b>\n
        \n\t-Shortness of breath
        \n\t-Chest tightness or pain
        \n\t-Trouble sleeping caused by shortness of breath, coughing or wheezing
        \n\t-A whistling or wheezing sound when exhaling (wheezing is a common sign of asthma in children)
        \n\t-Coughing or wheezing attacks that are worsened by a respiratory virus, such as a cold or the flu&#xA;
        \n<b>Signs that your asthma is probably worsening include:</b>\n
        \n\t-Asthma signs and symptoms that are more frequent and bothersome
        \n\t-Increasing difficulty breathing (measurable with a peak flow meter, a device used to check how well your lungs are working)
        \n\t-The need to use a quick-relief inhaler more often\n
        \n<b>For some people, asthma signs and symptoms flare up in certain situations:</b>\n
        \n\t-Exercise-induced asthma, which may be worse when the air is cold and dry
        \n\t-Occupational asthma, triggered by workplace irritants such as chemical fumes, gases or dust
	    \n\t-Allergy-induced asthma, triggered by airborne substances, such as pollen, mold spores, cockroach waste or particles of skin and dried saliva shed by pets (pet dander)
    </string>
    <string name="introduction_diabetes">Introduction: Diabetes</string>
    <string name="what_is_diabetes_title">What is Diabetes?</string>
    <string name="what_is_diabetes">Type I diabetes: Also known as juvenile diabetes, this type occurs when the body fails to produce insulin. People with type I diabetes are insulin-dependent, which means they must take artificial insulin daily to stay alive.\n
        \nType 2 diabetes: Type 2 diabetes affects the way the body uses insulin. While the body still makes insulin, unlike in type I, the cells in the body do not respond to it as effectively as they once did. This is the most common type of diabetes, according to the National Institute of Diabetes and Digestive and Kidney Diseases, and it has strong links with obesity.\n
        \nGestational diabetes: This type occurs in women during pregnancy when the body can become less sensitive to insulin. Gestational diabetes does not occur in all women and usually resolves after giving birth.
    </string>
    <string name="symptoms_diabetes"><b>There are diabetes warning signs and symptoms that both women and men have in common, for example:</b>\n
        \n\t-Excessive thirst and hunger
        \n\t-Frequent urination (from urinary tract infections or kidney problems)
        \n\t-Weight loss or gain
        \n\t-Fatigue
        \n\t-Irritability
        \n\t-Blurred vision
        \n\t-Slow-healing wounds
        \n\t-Nausea
        \n\t-Skin infections
        \n\t-Darkening of skin in areas of body creases (acanthosis nigricans)
        \n\t-Breath odor that is fruity, sweet, or an acetone odor
        \n\t-Tingling or numbness in the hands or feet
    </string>
    <string name="first_aid_rescue_info">Rescue Information</string>
    <string name="how_to_prevent_title">How to prevent?</string>
    <string name="first_aid_asthma">While there\'s no way to prevent asthma, by working together, you and your doctor can design a step-by-step plan for living with your condition and preventing asthma attacks.\n
        \nFollow your asthma action plan. With your doctor and health care team, write a detailed plan for taking medications and managing an asthma attack. Then be sure to follow your plan.\n
        \nAsthma is an ongoing condition that needs regular monitoring and treatment. Taking control of your treatment can make you feel more in control of your life in general.\n
        \nGet vaccinated for influenza and pneumonia. Staying current with vaccinations can prevent flu and pneumonia from triggering asthma flare-ups.\n
        \nIdentify and avoid asthma triggers. A number of outdoor allergens and irritants — ranging from pollen and mold to cold air and air pollution — can trigger asthma attacks. Find out what causes or worsens your asthma, and take steps to avoid those triggers.\n
        \nMonitor your breathing. You may learn to recognize warning signs of an impending attack, such as slight coughing, wheezing or shortness of breath. But because your lung function may decrease before you notice any signs or symptoms, regularly measure and record your peak airflow with a home peak flow meter.\n
        \nIdentify and treat attacks early. If you act quickly, you\'re less likely to have a severe attack. You also won\'t need as much medication to control your symptoms.When your peak flow measurements decrease and alert you to an oncoming attack, take your medication as instructed and immediately stop any activity that may have triggered the attack. If your symptoms don\'t improve, get medical help as directed in your action plan.\n
        \nTake your medication as prescribed. Just because your asthma seems to be improving, don\'t change anything without first talking to your doctor. It\'s a good idea to bring your medications with you to each doctor visit, so your doctor can double-check that you\'re using your medications correctly and taking the right dose.\n
        \nPay attention to increasing quick-relief inhaler use. If you find yourself relying on your quick-relief inhaler, such as albuterol, your asthma isn\'t under control. See your doctor about adjusting your treatment.\n
    </string>
    <string name="measurement_page_title">Want Our Advice?</string>
    <string name="measurement_page_subtitle">We would like to ask a few questions about your asthma condition to help make a preliminary assessment of your condition.
        \nNone of your information will be saved throughout this process, to protect your privacy</string>
    <string name="measurement_page_button1">Let\'s Do It</string>
    <string name="measurement_page_button2">Do It Later</string>
    <string name="next_stage_button">GO ON</string>
    <string name="stage2_7">2 of 7</string>
    <string name="predicted_peak_flow_q">What is your predicted peak flow?</string>
    <string name="predicted_peak_flow_s">If you do not know or have a predicted peak flow, put \'0\' and we will calculate a general one for you</string>
    <string name="stage4_7">4 of 7</string>
    <string name="respiratory_rate_q">What is your current respiration rate?</string>
    <string name="respiratory_rate_s">Count how many times your chest raises in a minute, while you\'re breathing normally</string>
    <string name="stage6_7">6 of 7</string>
    <string name="heart_rate_q">What is your heart rate?</string>
    <string name="heart_rate_s">Find your pulse, then count how many beats there are in 15 seconds and multiply that by 4</string>
    <string name="results">Your Results</string>
    <string name="severity_button1">Mild</string>
    <string name="severity_button2">Moderate</string>
    <string name="severity_button3">Severe</string>
    <string name="severity_button4">Emergency</string>
    <string name="severity_emergency"><b>Let’s keep calm…</b>\n
        \n\t-Dial 111 for ambulance
        \n\t-Keep using your reliever as often as needed – through a spacer, if one can be used with your reliever inhaler
        \n\t-Even if you seem to get better seek medical help right away
        \n\t-If you haven’t started taking your prednisone, start now\n
        \n<b>Emergency:</b>\n
        \n\t-Your symptoms are getting more severe quickly
        \n\t-You are finding it hard to speak or breathe
        \n\t-Your reliever is not helping much
        \n\t-You are using your reliever every 1‐2 hours\n
        \nAny alterations in medication should be made in consultation with your personal physician
    </string>
    <string name="record_new">New Health Record</string>
    <string name="record_name_add">Add Record Title</string>
    <string name="record_name">Record Title:</string>
    <string name="record_details_add">Add Details</string>
    <string name="record_details">Details:</string>
    <string name="record_save">Save Health Record</string>
</resources>