<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MeasurementResult"
    android:orientation="vertical">

    <!-- Header -->
    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/gradient_dark">

        <TextView
            android:id="@+id/lbl_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:paddingTop="100dp"
            android:text="@string/results"
            android:textAlignment="gravity"
            android:textSize="35sp"
            android:textColor="@color/colorWBlue"/>

        <ImageView
            android:id="@+id/icon_back_arrow"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginTop="76dp"
            android:contentDescription="@string/back_arrow"
            app:srcCompat="@drawable/ic_arrow_back_black_24dp"
            android:tint="@color/colorBlue" />

        <ImageView
            android:id="@+id/icon_disease_intro"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_alignParentEnd="true"
            android:contentDescription="@string/measurement"
            app:srcCompat="@drawable/ic_measurement"
            android:tint="@color/colorLBlue"/>

    </RelativeLayout>

    <!-- Severity Section -->

    <View
        android:id="@+id/divider1"
        android:layout_width="250dp"
        android:layout_height="1dp"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"
        android:background="@android:color/darker_gray"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_severity1"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:padding="10dp"
                android:layout_height="match_parent"
                android:backgroundTint="@color/colorMild"
                android:text="@string/severity_button1" />

            <Button
                android:id="@+id/btn_severity2"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:padding="10dp"
                android:layout_height="match_parent"
                android:backgroundTint="@color/colorModerate"
                android:text="@string/severity_button2"/>

            <Button
                android:id="@+id/btn_severity3"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:padding="10dp"
                android:layout_height="match_parent"
                android:backgroundTint="@color/colorSevere"
                android:text="@string/severity_button3"/>

            <Button
                android:id="@+id/btn_severity4"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:padding="10dp"
                android:layout_height="match_parent"
                android:backgroundTint="@color/colorEmergency"
                android:text="@string/severity_button4"/>

        </LinearLayout>

    <View
        android:id="@+id/divider2"
        android:layout_width="250dp"
        android:layout_height="1dp"
        android:layout_gravity="center_horizontal"
        android:background="@android:color/darker_gray"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="15dp"
        android:scrollbars="vertical"
        android:fillViewport="true">

        <TextView
            android:id="@+id/tv_severity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/severity_emergency"/>

    </ScrollView>

</LinearLayout>