<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MeasurementIntro"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/img_advice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:paddingTop="100dp"
            android:contentDescription="@string/measurement"
            app:srcCompat="@drawable/ic_advice_image" />

    </RelativeLayout>

    <TextView
        android:id="@+id/lbl_measurement_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="35sp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:text="@string/measurement_page_title"/>

    <TextView
        android:id="@+id/lbl_measurement_subtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textAlignment="center"
        android:text="@string/measurement_page_subtitle"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="50dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btn_measurement_yes"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:layout_centerHorizontal="true"
                android:text="@string/measurement_page_button1" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btn_measurement_no"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:layout_centerHorizontal="true"
                android:text="@string/measurement_page_button2" />

        </RelativeLayout>

    </LinearLayout>

</LinearLayout>